--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>About</title>
 </head>
 <body>
@@ -38,7 +39,10 @@
         </section>
     </article>
     <footer>
-
+        <a href="http://www.facebook.com" aria-label="facebook link"><i class="fa-brands fa-facebook"></i></a>
+        <a href="http://www.instagram.com" aria-label="instagram link"><i class="fa-brands fa-instagram"></i></a>
+        <a href="http://www.snapchat.com" aria-label="snapchat link"><i class="fa-brands fa-snapchat"></i></a>
+        <a href="http://www.twitter.com" aria-label="twitter link "><i class="fa-brands fa-twitter"></i></a>
     </footer>
 </body>
 </html>
