--- a/about.html
+++ b/about.html
@@ -9,9 +9,17 @@
     <title>About</title>
 </head>
 <body>
-    <header>
+    <nav>
+        <label class="logo">Re|Con</label>
+        <ul>
+            <li> <a href="home.html">Home</a></li>
+            <li> <a href="team.html">Team</a></li>
+            <li> <a href="about.html">About</a></li>
+            <li> <a href="contact.html">Contact</a></li>  
+            <li> <a href="partners.html">Partners</a></li>
+        </ul>
+    </nav>
 
-    </header>
     <main>
         <h1>Our Impact</h1>
         <img src="Photos/OurImpactPhoto.jpeg" alt="photo of team mates holding hands" class="impactphoto">
