Check code to create cohesive design and check responsiveness

--- a/Partners.html
+++ b/Partners.html
@@ -4,25 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Team.css" />
+    <link rel="stylesheet" href="Partners.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div class="bx bx-menu" id="menu-icon"></div>
-        <h1>Re|Con</h1>
-        <nav>
-          <ul class="navbar">
-            <li><a href="#">Home</a></li>
-            <li><a href="Team.html">Team</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="Partners.html">Partners</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
-    </div>
+      <nav>
+        <label class="logo">Re|Con</label>
+        <ul>
+            <li> <a href="home.html">Home</a></li>
+            <li> <a href="team.html">Team</a></li>
+            <li> <a href="about.html">About</a></li>
+            <li> <a href="contact.html">Contact</a></li>  
+            <li> <a href="partners.html">Partners</a></li>
+        </ul>
+      </nav>
 
     <aside>
       <div class="services" id="services">
@@ -31,28 +27,28 @@
         </section>
         <div class="service-container">
           <section class="s-box Aubrey1">
-            <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &minus;USPS</h3>
+            <h3>USPS</h3>
             <a href="https://www.usps.com/">
               <img src="Usps.avif" alt="Picture of USPS Partner"
             /></a>
           </section>
 
           <section class="s-box Aubrey1">
-            <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&minus;US Navy</h3>
+            <h3>US Navy</h3>
             <a href="#"
               ><img src="Navy.avif" alt="Picture of Navy Partner"
             /></a>
           </section>
 
           <section class="s-box Aubrey1">
-            <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &minus;US Army</h3>
+            <h3>US Army</h3>
             <a href="https://www.goarmy.com/careers-and-jobs.html"
               ><img src="Army.avif" alt=" Picture of Army Partner"
             /></a>
           </section>
 
           <section class="s-box Aubrey1">
-            <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &minus;Conley Inc</h3>
+            <h3>Conley Inc</h3>
             <a href="http://conleyconstructionusa.com/"
               ><img src="Conley.png" alt="Picture of Conley Partner"
             /></a>
@@ -60,5 +56,11 @@
         </div>
       </div>
     </aside>
+  <footer>
+      <a href="http://www.facebook.com" aria-label="facebook link"><i class="fa-brands fa-facebook"></i></a>
+      <a href="http://www.instagram.com" aria-label="instagram link"><i class="fa-brands fa-instagram"></i></a>
+      <a href="http://www.snapchat.com" aria-label="snapchat link"><i class="fa-brands fa-snapchat"></i></a>
+      <a href="http://www.twitter.com" aria-label="twitter link "><i class="fa-brands fa-twitter"></i></a>
+   </footer>
   </body>
 </html>
