--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- My nav bar -->
-    <header>
+
         <nav>
             <label class="logo">Re|Con</label>
             <ul>
@@ -21,6 +21,7 @@
                 <li> <a href="contact.html">Contact</a></li>  
                 <li> <a href="partners.html">Partners</a></li>
             </ul>
+        </nav>
         <!-- <ul class="contact-navbar">
             <li>Home</li>
             <li><a href="./contact.html">Contact Us</a></li>
@@ -28,10 +29,11 @@
             <li>Facts</li>
             <li>Company Partners</li>
         </ul> -->
-        <h2 class="contact-h2"> Contact Us</h2 class="contact-h2">
-        <p class="contact-p">Fill in the form below, and we'll get back to you.</p class="contact-p">
-    </header>
-    <form>      
+
+   
+    <form>
+       
+        <p>Contact Us</p>        
         <input name="name" type="text" class="feedback-input" placeholder="Full Name" required>  
         <input name="email" type="text" class="feedback-input" placeholder="Email@.com" required>
         <input Name="tel"  type="phone" class="feedback-input" Placeholder="000-000-0000" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
