--- a/Team.html
+++ b/Team.html
@@ -5,24 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="Team.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Re|Con Team</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div class="bx bx-menu" id="menu-icon"></div>
-        <h1>Re|Con</h1>
-        <nav>
-          <ul class="navbar">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="Partners.html">Partners</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
-    </div>
+    <nav>
+        <button id="logo">Re|Con</button>
+        <ul>
+            <li> <a href="home.html">Home</a></li>
+            <li> <a href="team.html">Team</a></li>
+            <li> <a href="about.html">About</a></li>
+            <li> <a href="contact.html">Contact</a></li>  
+            <li> <a href="partners.html">Partners</a></li>
+        </ul>
+    </nav>
+
     <aside>
       <div class="services" id="services">
         <section class="heading">
@@ -81,5 +78,12 @@
         <a href="Contact.html" class="btn">Contact Us</a>
       </section>
     </aside>
+
+    <footer class="footer">
+      <a href="http://www.facebook.com" aria-label="facebook link"><i class="fa-brands fa-facebook"></i></a>
+      <a href="http://www.instagram.com" aria-label="instagram link"><i class="fa-brands fa-instagram"></i></a>
+      <a href="http://www.snapchat.com" aria-label="snapchat link"><i class="fa-brands fa-snapchat"></i></a>
+      <a href="http://www.twitter.com" aria-label="twitter link "><i class="fa-brands fa-twitter"></i></a>
+    </footer>
   </body>
 </html>
